[gd_scene load_steps=19 format=3 uid="uid://ce44tjmbeymmg"]

[ext_resource type="Script" path="res://scenes/game_objects/player/player.gd" id="1_56xrt"]
[ext_resource type="Texture2D" uid="uid://do15a8a222ove" path="res://scenes/game_objects/player/player.png" id="2_0gv3a"]
[ext_resource type="PackedScene" uid="uid://doi84pup3s1n" path="res://scenes/components/velocity_component.tscn" id="2_gihat"]
[ext_resource type="PackedScene" uid="uid://d33xsgu0wa0ni" path="res://scenes/components/health_component.tscn" id="2_hlxdn"]
[ext_resource type="PackedScene" uid="uid://bk236euoet0wv" path="res://scenes/abilities/sword_ability/sword_ability_controller.tscn" id="2_qfmwn"]
[ext_resource type="AudioStream" uid="uid://c3mnxrpaxnhi" path="res://assets/audio/impactMining_000.ogg" id="2_qh87y"]
[ext_resource type="AudioStream" uid="uid://dgamkbelnut5q" path="res://assets/audio/impactMining_001.ogg" id="3_csh8q"]
[ext_resource type="AudioStream" uid="uid://hi45w06i5i34" path="res://assets/audio/impactMining_002.ogg" id="4_ex058"]
[ext_resource type="AudioStream" uid="uid://vp3puemhhem" path="res://assets/audio/impactMining_003.ogg" id="5_lf12a"]
[ext_resource type="AudioStream" uid="uid://chvyciy3aofv6" path="res://assets/audio/impactMining_004.ogg" id="6_n41ck"]

[sub_resource type="Animation" id="Animation_f8rii"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Visuals/Sprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Visuals/Sprite2D:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Visuals/Sprite2D:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_f1r25"]
resource_name = "walk"
length = 0.42
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Visuals/Sprite2D:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -3), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Visuals/Sprite2D:rotation")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.0, -0.261799, 0.261799, 0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Visuals/Sprite2D:scale")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3, 0.4),
"transitions": PackedFloat32Array(0.784584, 3.03144, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(0.9, 1.15), Vector2(1.2, 0.9), Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_40qqj"]
_data = {
"RESET": SubResource("Animation_f8rii"),
"walk": SubResource("Animation_f1r25")
}

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_03edn"]
streams_count = 5
stream_0/stream = ExtResource("2_qh87y")
stream_0/weight = 1.0
stream_1/stream = ExtResource("3_csh8q")
stream_1/weight = 1.0
stream_2/stream = ExtResource("4_ex058")
stream_2/weight = 1.0
stream_3/stream = ExtResource("5_lf12a")
stream_3/weight = 1.0
stream_4/stream = ExtResource("6_n41ck")
stream_4/weight = 1.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_drjqs"]
bg_color = Color(0.262745, 0.882353, 0.701961, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.247059, 0.14902, 0.192157, 0)

[sub_resource type="CircleShape2D" id="CircleShape2D_233be"]
radius = 32.0

[sub_resource type="CircleShape2D" id="CircleShape2D_yt3nu"]
radius = 6.0

[sub_resource type="CircleShape2D" id="CircleShape2D_ft78v"]
radius = 5.0

[node name="Player" type="CharacterBody2D" groups=["player"]]
collision_layer = 0
motion_mode = 1
script = ExtResource("1_56xrt")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_40qqj")
}

[node name="HitAudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = SubResource("AudioStreamRandomizer_03edn")

[node name="VelocityComponent" parent="." instance=ExtResource("2_gihat")]
max_speed = 125
acceleration = 25.0

[node name="HealthComponent" parent="." instance=ExtResource("2_hlxdn")]

[node name="Abilities" type="Node" parent="."]

[node name="SwordAbilityController" parent="Abilities" instance=ExtResource("2_qfmwn")]

[node name="DamageIntervalTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="HealthBar" type="ProgressBar" parent="."]
custom_minimum_size = Vector2(24, 6)
offset_left = -12.0
offset_top = -22.0
offset_right = 12.0
offset_bottom = -16.0
pivot_offset = Vector2(12, 3)
theme_override_styles/fill = SubResource("StyleBoxFlat_drjqs")
max_value = 1.0
value = 0.5
show_percentage = false

[node name="PickupArea2D" type="Area2D" parent="."]
visible = false
position = Vector2(0, -5)
collision_layer = 16
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="PickupArea2D"]
shape = SubResource("CircleShape2D_233be")

[node name="Visuals" type="Node2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="Visuals"]
texture = ExtResource("2_0gv3a")
offset = Vector2(0, -8)

[node name="CollisionArea2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="CollisionArea2D"]
position = Vector2(0, -6)
shape = SubResource("CircleShape2D_yt3nu")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -5)
shape = SubResource("CircleShape2D_ft78v")
